--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.scss"
             ],
-            "scripts": ["node_modules/marked/lib/marked.js"]
+            "scripts": []
           },
           "configurations": {
             "production": {
